--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,7 @@ dexp:
     v1: 50
     v2: 80
   reset:
-    cron: "*/5 * * * * ?"
+    cron: "0 0 0 * * ?"
 
 #MySQL database settings.
 database:
@@ -14,7 +14,7 @@ database:
   # The database port. (Only required if mysql is true)
   port: 3306
   # The database names. (Only required if mysql is true)
-  database: kooksrv
+  database: dexp
   # The database username. (Only required if mysql is true)
   user: root
   # The database password. (Only required if mysql is true)
