--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+            <repository>
+                <id>placeholderapi</id>
+                <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+            </repository>
     </repositories>
 
     <dependencies>
@@ -109,6 +113,12 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.11.6</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
